Cambios realizados en el apartado de catálogo, CSS

--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -2,7 +2,6 @@
 
     --black-color: rgb(27, 25, 25);
     
-
 }
 
 html,body{
@@ -48,12 +47,18 @@ nav li a{
 
     color: gray;
     text-decoration: none;
+    background-color: var(--black-color);
+    padding: 15px;
+    padding-top: 35px;
+    padding-bottom: 32px;
 
 }
 
 nav li a:hover{
     
-    color: white
+    color: white;
+    background-color: rgb(36, 35, 35);
+
 }
 
 .main_section{
@@ -105,3 +110,4 @@ nav li a:hover{
     margin: 0px;
 
 }
+
