--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -118,5 +118,9 @@ nav li a:hover{
     margin-bottom: 5px;
     width: 100%;
     height: 20px;
+    border-radius: 2px;
+    border: 1px solid;
+    color: var(--black-color);
     
+
 }
