--- a/CSS/Estilo.css
+++ b/CSS/Estilo.css
@@ -86,6 +86,7 @@ nav li a:hover{
     color: white;
     margin: 2%;
     box-shadow: 2px 2px 6px black;
+    width: 80%;
 
 }
 
@@ -112,15 +113,21 @@ nav li a:hover{
 
 }
 
-.pago_texto input{
+.pago_texto_input{
 
     margin-top: 5px;
     margin-bottom: 5px;
-    width: 100%;
+    width: 250px;
     height: 20px;
     border-radius: 2px;
     border: 1px solid;
     color: var(--black-color);
     
+}
+
+.pago_texto{
+
+    margin: auto;
+    margin-top: 15px;
 
 }
